services/web-connector/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-connector
  namespace: tetral-system
  labels:
    app.kubernetes.io/name: web-connector
    app.kubernetes.io/part-of: tetral
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web-connector
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app.kubernetes.io/name: web-connector
        app.kubernetes.io/part-of: tetral
    spec:
      serviceAccountName: web-connector
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      containers:
        - name: web-connector
          image: ghcr.io/tetral-ai/tetral:0.0.0-dev
          imagePullPolicy: IfNotPresent
          command:
            - /usr/local/bin/web-connector
          ports:
            - name: web-grpc
              containerPort: 9092
            - name: web-metrics
              containerPort: 9464
          livenessProbe:
            httpGet:
              path: /health
              port: web-metrics
          readinessProbe:
            httpGet:
              path: /ready
              port: web-metrics
          resources:

            limits:
              cpu: 500m
              ephemeral-storage: 512Mi
              memory: 512Mi
            requests:
              cpu: 100m
              ephemeral-storage: 128Mi
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: store-trust
              mountPath: /var/run/tetral/store-trust
              readOnly: true
            - name: web-connector-kubernetes-api
              mountPath: /var/run/secrets/tetral-kubernetes-api
              readOnly: true
      volumes:
        - name: store-trust
          configMap:
            name: "tetral-store-trust"
        - name: web-connector-kubernetes-api
          projected:
            sources:
              - serviceAccountToken:
                  expirationSeconds: 600
                  path: web-connector-tokenreview/token
              - configMap:
                  name: kube-root-ca.crt
                  items:
                    - key: ca.crt
                      path: ca.crt
