services/web-connector/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-connector
  namespace: tetral-system
  labels:
    app.kubernetes.io/name: web-connector
    app.kubernetes.io/part-of: tetral
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web-connector
  ports:
    - name: web-grpc
      port: 9092
      targetPort: web-grpc
    - name: web-metrics
      port: 9464
      targetPort: web-metrics
